Improvement: Event Emitter + React Router
* Added an Event Emitter library for pub/sub
* Added react-router-dom for dynamic state routing
* Modified directory structure
* Continuing to separate code into Components

AP-56

--- a/apollo-ui/src/index.tailwind.css
+++ b/apollo-ui/src/index.tailwind.css
@@ -12,17 +12,8 @@
     @apply .p-2 .cursor-pointer .border-l .border-r .border-t .border-b-0;
 }
 
-.pill {
-    @apply .text-black;
+.border-collapse {
+    border-collapse: collapse;
 }
-
-.pill:hover {
-    @apply .text-blue;
-}
-
-.pill-active {
-    @apply .text-blue;
-}
-
 
 @tailwind utilities;
