AP-248: UI supports authentication
Merged in AP-248-ui-support-auth-integration-with- (pull request #206)
Approved-by: Shweta Hemdev <sh@stackrox.com>
Approved-by: Ivan Kornienko <i@stackrox.com>

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -225,5 +225,15 @@ their built-in classes, so this is a workaround to `bundle` the Firefox fix with
     min-width: 16rem !important;
 }
 
+.login-bg {
+    background: -webkit-linear-gradient(right, hsl(var(--primary), var(--s-50), var(--l-50)), hsl(var(--primary), var(--s-60), var(--l-50)));
+    background: -o-linear-gradient(right, hsl(var(--primary), var(--s-50), var(--l-50)), hsl(var(--primary), var(--s-60), var(--l-50)));
+    background: linear-gradient(to left, hsl(var(--primary), var(--s-50), var(--l-50)), hsl(var(--primary), var(--s-60), var(--l-50)));
+}
+
+.text-transparent {
+    color: transparent;
+}
+
 
 @tailwind utilities;
