ROX-2393+ROX-2421: Config Management Side Panel + Breadcrumbs (stackrox/rox#2459)
* ROX-2393: Side Panel
* ROX-2421: Added Side Panel Breadcrumbs

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1216,3 +1216,9 @@ h6 {
 .tippy-popper .tippy-tooltip {
     opacity: 0.8 !important;
 }
+
+.overlay {
+    content: "";
+    background-image: var(--base-800);
+    @apply .absolute .pin-t .pin-l .w-full .h-full .opacity-25 .pointer-events-none;
+}
