style fix for collapsible table (stackrox/rox#3065)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -857,7 +857,7 @@ h6 {
     @apply .whitespace-normal !important;
 }
 
-.ReactTable .rt-tbody .rt-tr:hover .rt-td {
+.ReactTable .rt-tbody .rt-tr:hover > .rt-td {
     @apply .bg-base-200 !important;
     z-index: 3 !important;
     box-shadow: 0px -1px 0 0 config("colors.base-400"),
