--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -260,6 +260,10 @@ button[disabled] {
     }
 }
 
+.shadow-sidepanel {
+    box-shadow: 0 0 44px 0 rgba(31,48,103,0.64);
+}
+
 .shadow-underline {
     box-shadow: inset 0 -1px 0px 0 hsla(0, 0%, 0%, 0.1);
 }
@@ -1217,8 +1221,26 @@ h6 {
     opacity: 0.8 !important;
 }
 
-.overlay {
-    content: "";
-    background-image: var(--base-800);
-    @apply .absolute .pin-t .pin-l .w-full .h-full .opacity-25 .pointer-events-none;
+.overlay:after {
+   content: "";
+   background: var(--base-500);
+   position: absolute !important;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   opacity: .25;
+   z-index: 10;
+}
+
+.bg-side-panel-wave {
+    background: url("images/side-panel-icons/sidepanel-wave.svg") no-repeat, var(--base-200) !important;
+    background-size: 100% !important;
+}
+
+.bg-counts-widget {
+    background: url('images/counts-widget-blocks.svg');
+    width: 100% !important;
+    background-repeat: repeat-x;
+    background-position: bottom right;
 }
