--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -261,7 +261,7 @@ button[disabled] {
 }
 
 .shadow-sidepanel {
-    box-shadow: 0 0 44px 0 rgba(31,48,103,0.64);
+    box-shadow: 0 0 44px 0 rgba(31, 48, 103, 0.64);
 }
 
 .shadow-underline {
@@ -1222,24 +1222,25 @@ h6 {
 }
 
 .overlay:after {
-   content: "";
-   background: var(--base-500);
-   position: absolute !important;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   opacity: .25;
-   z-index: 10;
+    content: "";
+    background: var(--base-500);
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.25;
+    z-index: 10;
 }
 
 .bg-side-panel-wave {
-    background: url("images/side-panel-icons/sidepanel-wave.svg") no-repeat, var(--base-200) !important;
+    background: url("images/side-panel-icons/sidepanel-wave.svg") no-repeat,
+        var(--base-200) !important;
     background-size: 100% !important;
 }
 
 .bg-counts-widget {
-    background: url('images/counts-widget-blocks.svg');
+    background: url("images/counts-widget-blocks.svg");
     width: 100% !important;
     background-repeat: repeat-x;
     background-position: bottom right;
