ROX-3537-Add CVE description in full-width column span below <tr> (stackrox/rox#3717)
## Description

Using the React-Table "SubComponent" feature, with some CSS class shenanigans.

## Testing Performed

Manual testing

(the API is pre-truncating the value before they return it to us currently, but they are planning to quit doing that before demo.)

![Screen Shot 2019-10-17 at 3 13 36 PM](https://user-images.githubusercontent.com/715729/67051787-f6815880-f0f0-11e9-8afd-51faa0356b02.png)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -869,6 +869,24 @@ h6 {
     @apply .whitespace-normal !important;
 }
 
+.ReactTable.expanded .rt-tbody .rt-tr .rt-td {
+    box-shadow: 0px -1px 0 0 config("colors.base-300"),
+        inset 0px -1px 0 -1px config("colors.base-300");
+    @apply .whitespace-normal !important;
+}
+
+.ReactTable.expanded .rt-tbody .rt-tr:hover > .rt-td {
+    @apply .bg-base-200 !important;
+    z-index: 3 !important;
+    box-shadow: 0px -1px 0 0 config("colors.base-400"),
+        inset 0px -1px 0 -1px config("colors.base-400");
+}
+
+.ReactTable.expanded .rt-tbody .rt-tr-group:hover {
+    @apply .bg-base-200 !important;
+    z-index: 3 !important;
+}
+
 .ReactTable .rt-tbody .rt-tr:hover > .rt-td {
     @apply .bg-base-200 !important;
     z-index: 3 !important;
