Remove all references to extensions/v1beta1 (stackrox/rox#4256)

--- a/scale/mocksensor/mocksensor.yaml.tmpl
+++ b/scale/mocksensor/mocksensor.yaml.tmpl
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mock-sensor-${NAME}
@@ -12,6 +12,8 @@ metadata:
 spec:
   replicas: 1
   minReadySeconds: 15
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: mocksensor-${NAME}
