ROX-4143: Refactor Hovers and Tooltips to unify around tippy.js (stackrox/rox#4761)
- Kill homegrown attempts to do the tooltips in favor of already used in the app tippy.js and its official React wrapper.
- Upgrade tippy.js to 5.x
- Kill react-tippy (which isn't an official React wrapper for tippy.js)
- Rewrite HoverHint component to be a positioning wrapper that uses tippy.js underneath
- Replace couple of rc-tooltip usages with tippy.js to proof the concept and improve visual consistency

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1265,10 +1265,31 @@ h6 {
     left: 50%;
 }
 
-/** Tippy tooltip **/
-.tippy-popper .tippy-tooltip {
-    opacity: 0.8 !important;
+/** tippy.js **/
+@import '~tippy.js/dist/tippy.css';
+
+.tippy-content {
+    @apply shadow-md p-0
 }
+
+.rox-tooltip-overlay {
+    @apply p-2 text-sm text-center text-base-600 z-10 bg-tertiary-200 rounded border border-tertiary-400
+}
+
+.tippy-tooltip[data-placement^='top'] .tippy-arrow {
+    border-top-color: var(--tertiary-400);
+}
+.tippy-tooltip[data-placement^='bottom'] .tippy-arrow {
+    border-bottom-color: var(--tertiary-400);
+}
+.tippy-tooltip[data-placement^='left'] .tippy-arrow {
+    border-left-color: var(--tertiary-400);
+}
+.tippy-tooltip[data-placement^='right'] .tippy-arrow {
+    border-right-color: var(--tertiary-400);
+}
+
+/** End of tippy.js styles */
 
 .overlay:after {
     content: '';
